--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
     <ul id="menu">
       <a href="#team"><li>Meet the Team</li></a>
       <a href="#webDesign"><li>Web Design</li></a><!--change in ALLI-->
-      <a href="#"><li>Graphic Design</li></a>
-      <a href="#"><li>Photography</li></a>
+      <a href="#graphicDesign"><li>Graphic Design</li></a>
     </ul>
   </div>
 </nav>
@@ -73,7 +72,7 @@
 <div id="meetTeam"> <!--add the meat the team div-->
 	<div id="alli">
 		<img class="alliImg png" src="images/alli.png" alt="Allison Pao" width="100%" height="auto">
-		<img class="alliImg jpg" src="images/alli.jpeg" alt="Allison Pao" width="100%" height="auto"> <!--CHANGE ON ALLI-->
+		<img class="alliImg jpg" src="images/alli.jpeg" alt="Allison Pao" width="100%" height="auto">
 		<h2 id="alliTitle">ALLISON<br>PAO</h2>
 	</div>
 
@@ -85,7 +84,7 @@
 
 	<div id="soraya">
 		<img class="sorayaImg png" src="images/soraya.png" alt="Soraya Pittis" width="100%" height="auto">
-		<img class="sorayaImg jpg" src="images/soraya.jpeg" alt="Soraya Pittis" width="100%" height="auto"> <!--CHNAGE ON ALLI-->
+		<img class="sorayaImg jpg" src="images/soraya.jpeg" alt="Soraya Pittis" width="100%" height="auto">
 		<h2 id="sorayaTitle">SORAYA<br>PITTIS</h2>
 	</div>
 
@@ -95,7 +94,7 @@
 		</p>
 	</div>
 </div>
-	<div id="quote"> <!--changed the breals-->
+	<div id="quote"> <!--changed the breaks-->
 		<p>
 		“Creativity is nothing but a mind set free.” <br>
 		–Torrie T. Asai
@@ -117,18 +116,19 @@
 
 
 		<div id="webDesign">
+      <span class="png greyLine"></span>
 			<h2>WEB DESIGN</h2>
 		<p>
 We at Engage Designs believe a company’s success begins with their webpage.  This is the first thing most consumers will see which can make or break their opinion.
 
 		</p>
+  </div>
     <div id="webDesignText">
       <p>With plenty of experience with web design and development, we have accumulated plenty of pieces for our portfolio.  From working with startup companies and young clients to larger foundations, we have learned plenty over the years and still strive to learn more.</p>
     </div>
     <div id="webDesignImg">
       <img src="images/lsfc-screen-crop.jpg">
     </div>
-	</div>
 	</div>
 
 	<div id="graphicDesign">
