--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <nav role="navigation">
   <div id="menuToggle">
   
-    <input type="checkbox" />
+    <input id="checkbox" type="checkbox" />
     
 
     <span></span>
@@ -45,14 +45,14 @@
 	
 	<div id="team">
 	<img class="teamImg png" src="images/duo.png" alt="The Team" width="100%" height="auto">
-	<img class="teamImg jpg" src="images/duo.jpeg" alt="The Team" width="100%" height="auto">
-<h1 id="teamTitle">MEET THE <br> TEAM <span></span> </h1>
+	<img class="teamImg jpg notab" src="images/duo.jpeg" alt="The Team" width="100%" height="auto">
+<div id="theTeam"><h1 id="teamTitle">MEET THE <br> TEAM <span></span> </h1>
 		<p>Welcome to Engage Designs! <br> We are a duo based in Toronto that specializes in web design and development, graphic design, and photography.</p>
 		
 		<div class="yellowLine"></div>
+</div>
 	</div>
 	
-	<div
 	
 		 <div id="teamWeb">
 <img id="teamImgWeb" src="images/web-team.jpg" alt="The Team" width="100%" height="auto">
@@ -63,7 +63,8 @@
 	
 	<div id="alli">
 		<img class="alliImg png" src="images/alli.png" alt="Allison Pao" width="100%" height="auto">
-		<img class="alliImg jpg" src="images/alli.jpeg" alt="Allison Pao" width="100%" height="auto"> <!--CHANGE ON ALLI-->
+		<img class="alliImg jpg" src="images/alli.jpeg" alt="Allison Pao" width="100%" height="auto"> 
+		<img class="sorayaImg jpg" src="images/soraya.jpeg" alt="SorayaPittis">
 		<h2 id="alliTitle">ALLISON<br>PAO</h2>
 	</div>
 	
@@ -75,7 +76,7 @@
 	
 	<div id="soraya">
 		<img class="sorayaImg png" src="images/soraya.png" alt="Soraya Pittis" width="100%" height="auto">
-		<img class="sorayaImg jpg" src="images/soraya.jpeg" alt="Soraya Pittis" width="100%" height="auto"> <!--CHNAGE ON ALLI-->
+		<img class="sorayaImg jpg notab" src="images/soraya.jpeg" alt="Soraya Pittis" width="100%" height="auto"> 
 		<h2 id="sorayaTitle">SORAYA<br>PITTIS</h2>
 	</div>
 	
@@ -95,7 +96,7 @@
 	
 	<div id="portfolio">
 		<img class="portfolioImg png" src="images/city.png" alt="Cityscape" width="100%" height="auto">
-		<img class="portfolioImg jpg" src="images/city.jpg" alt="Cityscape" width="100%" height="auto"> <!--CHANGE ON ALLI--> <!--From here down, change on Alli-->
+		<img class="portfolioImg jpg" src="images/city.jpg" alt="Cityscape" width="100%" height="auto">
 		<h2 id="portfolioText">OUR<br> PORTFOLIO</h2>
 	</div>
 	
