git ignore files

--- a/index.html
+++ b/index.html
@@ -166,14 +166,14 @@ We at Engage Designs believe a company’s success begins with their webpage.  T
 
 <!--ALLI INFO MODAL-->
 <div id="memModal" class="modals">
-	<div class="modal-contents">
+	<div class="modal-contents notab jpg">
 		<span class="closes">&times;</span>
 		<p>Phone: (123) 456-789<br>Email: a_pao4@fanshaweonline.ca</p>
 	</div>
 </div>
 
 <!--SORAYA INFO MODAL-->
-<div id="memModals" class="modals">
+<div id="memModals" class="modals notab jpg">
 	<div class="modal-contents">
 		<span class="closed">&times;</span>
 		<p>Phone: (987) 654-321<br>Email: spittis@fanshaweonline.ca</p>
