final web css and updated wireframes

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <br>We are a pair of super enthusiastic individuals who love meeting and working with new people.  Learn more about us below.</p>
   </div>
 </div>
-	
+<div id="teamBios">
 	<div class="squares" id="alli">
 		<img class="alliImg png" src="images/alli.png" alt="Allison Pao" width="100%" height="auto">
 		<img class="alliImg contents rss jpg" src="images/alli.jpeg" alt="Allison Pao" width="100%" height="auto"> 
@@ -71,8 +71,8 @@
 	
 	<div class="squares" id="alliBio">
 		<p class="contents">
-			From an early age, Allison’s parents enrolled her in various extracurriculars, one being art. She quickly found a love in self-expression through various art forms.  With the evolution of her artistic skills, she soon found a passion for graphic design and decided to pursue it.
-			<button class="jpg notab" id="allisonB" type="button">Contact Info</button>
+			From an early age, Allison’s parents enrolled her in various extracurriculars, one being art. She quickly found a love in self-expression through various art forms.  With the evolution of her artistic skills, she soon found a passion for graphic design and decided to go for it.
+			<button class="jpgnotab contactBtn" id="allisonB" type="button">Contact Info</button>
 		</p>
 		
 	</div>
@@ -86,11 +86,11 @@
 	<div class="squares" id="sorayaBio">
 		<p class="contents">
 		Soraya was raised on a farm, which would soon inspire her artistic style. From a young age, she took an interest in photography as she and her father bonded over the hobby. Through her love for photography, she explored her other artistic skills and soon found a passion for web development.  
-		<button class="jpg notab" id="sorayaB" type="button">Contact Info</button>
+		<button class="jpgnotab contactBtn" id="sorayaB" type="button">Contact Info</button>
 	</p>
 		
 	</div>
-		
+</div>
 	<div id="quote">
 		<p>
 		“Creativity is nothing<br>but a mind set free.” <br>
@@ -120,7 +120,7 @@ We at Engage Designs believe a company’s success begins with their webpage.  T
  		</p>
 
 		<div class="webDesignImg">
-			<img src="images/lsfc-screen.jpg" alt="LSFC website" width="100%" height="auto">
+			<img src="images/lsfc-screen.jpg" alt="LSFC website" title="LSFC website" width="100%" height="auto">
 		</div>
 	</div>
 
