--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 	<div class="squares" id="alliBio">
 		<p class="contents">
 			From an early age, Allison’s parents enrolled her in various extracurriculars, one being art. She quickly found a love in self-expression through various art forms.  With the evolution of her artistic skills, she soon found a passion for graphic design and decided to go for it.
-			<button class="jpgnotab contactBtn" id="allisonB" type="button">Contact Info</button>
+			<button class="jpg notab" id="allisonB" type="button">Contact Info</button>
 		</p>
 		
 	</div>
@@ -86,7 +86,7 @@
 	<div class="squares" id="sorayaBio">
 		<p class="contents">
 		Soraya was raised on a farm, which would soon inspire her artistic style. From a young age, she took an interest in photography as she and her father bonded over the hobby. Through her love for photography, she explored her other artistic skills and soon found a passion for web development.  
-		<button class="jpgnotab contactBtn" id="sorayaB" type="button">Contact Info</button>
+		<button class="jpg notab" id="sorayaB" type="button">Contact Info</button>
 	</p>
 		
 	</div>
